--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!---<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+
+<!--- 543px <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Website</title>
 </head>
@@ -45,7 +46,7 @@ There are many variations of passages of Lorem Ipsum available, but the majority
                </div>
             </div>
         </div>
-        <hr size="100px">
+        <!---<hr size="100px">-->
         <div class="footer">
 
         </div>
