favicon added and totally modified

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
 
 <!--- 543px <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Website</title>
 </head>
 <body>
     <div class="main-body">
         <div class="header">
+            <img class="image" src="favicon.ico" alt="ICON" width="85px">
+            <div class="nav">
+                <button class="btn-2">Home</button>
+                <button class="btn-2">About</button>
+                <button class="btn-2">Blog</button>
+                <button class="btn-2">Gallery</button>
+            </div>
             <div class="login-signup">
                 <button class="btn-1">Login</button>
                 <button class="btn-1">Signup</button>
@@ -48,7 +56,22 @@ There are many variations of passages of Lorem Ipsum available, but the majority
         </div>
         <!---<hr size="100px">-->
         <div class="footer">
-
+            <div class="logo">
+                <p><bold>By<br>&nbsp;&nbsp;&nbsp;&nbsp;Arjun</bold></p>
+            </div>
+            <div class="contact">
+                <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact me</h5>
+                <table>
+                    <tr>
+                        <td>WhatsApp : </td>
+                        <td><a href="https://wa.me/qr/5JD4PB4IKQWWO1">+919656408771</a></td>
+                    </tr>
+                    <tr>
+                        <td>Email : </td>
+                        <td><a href="mailto:arjunbchennithala@gmail.com">arjunbchennithala@gmail.com</a></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </body>
