some goal achived

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ There are many variations of passages of Lorem Ipsum available, but the majority
         <!---<hr size="100px">-->
         <div class="footer">
             <div class="logo">
-                <p><bold>By<br>&nbsp;&nbsp;&nbsp;&nbsp;Arjun</bold></p>
+                <p><bold>Made by Arjun</bold></p>
             </div>
             <div class="contact">
                 <h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact me</h5>
